tests/src/frontend/typechecking/exhaustiveness/invalid/when_pattern_exhaustiveness.sk
base class T {
  children =
  | A()
  | B()
}

fun foo(x: T): String {
  x match {
  | A() if (true) -> "A"
  | B() if (true) -> "B"
  }
}
